# LedDriverIoT

./: .dockerignore  .gitignore  Arduino.Dockerfile  CMakeLists.txt  Dockerfile  Idf.Dockerfile  License.txt  Readme.md  compile_resources.py  compile_with_docker.sh  partitions.csv  sdkconfig  sdkconfig.old  validate_config.cpp
main/: CMakeLists.txt  addressed.cpp  addressed.h  color_endpoints.cpp  color_endpoints.h  configuration.cpp  configuration.h  constrain.h  conversions.cpp  conversions.h  fastlz.cpp  fastlz.h  filter_functions.cpp  filter_functions.h  fixedpoint.h  functions.cpp  functions.h  gpio_mapping.h  hardware_configuration.cpp  hardware_configuration.h  idf_component.yml  knobs.cpp  knobs.h  ledc_driver.cpp  ledc_driver.h  light_pipeline.cpp  light_pipeline.h  main.cpp  main.ino  modules.cpp  outputs.cpp  resistance_matrix.cpp  resistance_matrix.h  resources.cpp  resources.h  server.cpp  server.h  utils.h  validate_json.cpp  validate_json.h  (+2 more)
main/src/: addressed.cpp  addressed.h  animations.cpp  animations.h  common_types.h  configuration.cpp  configuration.h  conversions.cpp  conversions.h  default_color.cpp  default_color.h  dynamic_buffers.cpp  dynamic_buffers.h  fastlz.cpp  fastlz.h  filter_functions.cpp  filter_functions.h  fixedpoint.h  hardware_configuration.cpp  hardware_configuration.h  inplace_vector.h  inputs.cpp  inputs.h  json_utils.h  knobs.cpp  knobs.h  ledc_driver.cpp  ledc_driver.h  logs.cpp  logs.h  memory_stream.cpp  memory_stream.h  modules.cpp  modules.h  network.cpp  network.h  outputs.cpp  outputs.h  poly_approx.h  resources.cpp  (+15 more)
(+105 files in other folders)
