idf_component_register(
    SRCS "main.cpp" "srledc_driver.cpp" "srconversions.cpp" "srdynamic_buffers.cpp" "srhardware_configuration.cpp" "srtemperature.cpp" "sroutputs.cpp" "srendpointinitialization.cpp" "srendpointcolors.cpp" "srendpointnetwork.cpp" "srendpointtemperature.cpp" "srendpointoutputs.cpp" "srendpointupdate.cpp" "srendpointconfiguration.cpp" "srendpointfavorites.cpp" "srknobs.cpp" "srfastlz.cpp" "srserver.cpp" "srtaylormath.cpp" "srinputs.cpp" "srmodules.cpp" "srresources.cpp" "srwifi.cpp" "srfilter_functions.cpp" "srconfiguration.cpp" "srtimer_shutdown.cpp" "srtimer_mgr.cpp" "srvalidate_json.cpp"
    INCLUDE_DIRS "src"
)
